// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBox Rendering with custom templates 1`] = `
<div
  className="root"
>
  <form
    action=""
    className="form"
    noValidate={true}
    onReset={[Function]}
    onSubmit={[Function]}
    role="search"
  >
    <input
      autoCapitalize="off"
      autoComplete="off"
      autoCorrect="off"
      autoFocus={false}
      className="input"
      disabled={false}
      maxLength={512}
      onChange={[Function]}
      placeholder=""
      spellCheck={false}
      type="search"
      value=""
    />
    <button
      className="submit"
      dangerouslySetInnerHTML={
        Object {
          "__html": "submit template",
        }
      }
      hidden={false}
      title="Submit the search query."
      type="submit"
    />
    <button
      className="reset"
      dangerouslySetInnerHTML={
        Object {
          "__html": "reset template",
        }
      }
      hidden={true}
      title="Clear the search query."
      type="reset"
    />
    <span
      className="loadingIndicator"
      dangerouslySetInnerHTML={
        Object {
          "__html": "loadingIndicator template",
        }
      }
      hidden={true}
    />
  </form>
</div>
`;

exports[`SearchBox Rendering with default props 1`] = `
<div
  className="root"
>
  <form
    action=""
    className="form"
    noValidate={true}
    onReset={[Function]}
    onSubmit={[Function]}
    role="search"
  >
    <input
      autoCapitalize="off"
      autoComplete="off"
      autoCorrect="off"
      autoFocus={false}
      className="input"
      disabled={false}
      maxLength={512}
      onChange={[Function]}
      placeholder=""
      spellCheck={false}
      type="search"
      value=""
    />
    <button
      className="submit"
      dangerouslySetInnerHTML={
        Object {
          "__html": Object {
            "cssClasses": Object {
              "form": "form",
              "input": "input",
              "loadingIcon": "loadingIcon",
              "loadingIndicator": "loadingIndicator",
              "reset": "reset",
              "resetIcon": "resetIcon",
              "root": "root",
              "submit": "submit",
              "submitIcon": "submitIcon",
            },
          },
        }
      }
      hidden={false}
      title="Submit the search query."
      type="submit"
    />
    <button
      className="reset"
      dangerouslySetInnerHTML={
        Object {
          "__html": Object {
            "cssClasses": Object {
              "form": "form",
              "input": "input",
              "loadingIcon": "loadingIcon",
              "loadingIndicator": "loadingIndicator",
              "reset": "reset",
              "resetIcon": "resetIcon",
              "root": "root",
              "submit": "submit",
              "submitIcon": "submitIcon",
            },
          },
        }
      }
      hidden={true}
      title="Clear the search query."
      type="reset"
    />
    <span
      className="loadingIndicator"
      dangerouslySetInnerHTML={
        Object {
          "__html": Object {
            "cssClasses": Object {
              "form": "form",
              "input": "input",
              "loadingIcon": "loadingIcon",
              "loadingIndicator": "loadingIndicator",
              "reset": "reset",
              "resetIcon": "resetIcon",
              "root": "root",
              "submit": "submit",
              "submitIcon": "submitIcon",
            },
          },
        }
      }
      hidden={true}
    />
  </form>
</div>
`;
